# new_admin_panel_sprint_2

./: .gitignore  Makefile  README.md  pyproject.toml
django_api/: docker-compose.yml  nginx.conf
django_api/app/: .env.example  Dockerfile  entrypoint.sh  requirements.txt
django_api/app/api/: apps.py  mixins.py  models.py  urls.py
django_api/app/api/migrations/: 0001_initial.py
django_api/app/api/v1/: mixins.py  urls.py  views.py
django_api/app/config/: settings.py
django_api/app/config/components/: application.py  base.py  database.py  media.py
django_api/app/sqlite_to_postgres/: config.py  load_data.py
django_api/app/sqlite_to_postgres/src/: extract_data.py  save_data.py  schemas.py  sql_schemas.py
django_api/app/sqlite_to_postgres/tests/: check_consistency.py  conftest.py
django_api/configs/: site.conf
django_api/movies/: apps.py  models.py  settings.py  urls.py
django_api/movies/api/: urls.py
django_api/movies/api/v1/: urls.py  views.py
docker_compose/empty_project/: .env  docker-compose.yml  nginx.conf
docker_compose/empty_project/app/: Dockerfile  requirements.txt
docker_compose/empty_project/app/example/: settings.py
docker_compose/empty_project/app/uwsgi/: uwsgi.ini
docker_compose/simple_project/: docker-compose.yml
docker_compose/simple_project/app/: Dockerfile
docker_compose/simple_project/configs/: site.conf
